# FenrirEngine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  FenrirEngine.sln  LICENSE  README.md  generate.bat  premake5.lua
.github/workflows/: clang-format-check.yml
Fenrir/: Fenrir.vcxproj  Fenrir.vcxproj.filters
Fenrir/src/: Fenrir.h  pch.h
Fenrir/src/Fenrir/: Application.cpp  Application.hpp  Core.hpp  EntryPoint.hpp  Layer.cpp  Layer.hpp  LayerStack.cpp  LayerStack.hpp  Log.cpp  Log.hpp  Window.hpp
Fenrir/src/Fenrir/Events/: ApplicationEvent.hpp  Event.hpp  KeyEvent.hpp  MouseEvent.hpp
Fenrir/src/Fenrir/Platform/Windows/: WindowsWindow.cpp  WindowsWindow.hpp
FenrirEngine/: FenrirEngine.vcxproj  FenrirEngine.vcxproj.filters
FenrirEngine/src/: FenrirEngine.h
FenrirEngine/src/Fenrir/: Application.hpp  Core.hpp
Sandbox/: Sandbox.vcxproj
Sandbox/src/: SandboxApp.cpp
cmake/: FenrirCMakeUtils.cmake
examples/: CMakeLists.txt
examples/DemoApp/: CMakeLists.txt
examples/DemoApp/assets/: demoApp.feproj
examples/DemoApp/assets/shaders/: basic_fragment.glsl  basic_vertex.glsl  debug_fragment.glsl  debug_vertex.glsl  error.frag  error.vert  fragment.glsl  light_vertex.glsl  lighted_fragment.glsl  lighted_vertex.glsl  skybox_fragment.glsl  skybox_vertex.glsl  vertex.glsl
examples/DemoApp/libs/: .gitignore  CMakeLists.txt
examples/DemoApp/libs/ImGuizmo/: CMakeLists.txt
examples/DemoApp/libs/imgui/: CMakeLists.txt
examples/DemoApp/libs/imgui/font/: firaCode.cpp  firaCode.hpp
examples/DemoApp/managed/DotNetLib/: DotNetLib.csproj  Lib.cs
examples/DemoApp/managed/Fenrir.Managed/: Fenrir.Managed.csproj  Fenrir.Managed.sln  Lib.cs
examples/DemoApp/managed/Fenrir.Managed/src/: Lib.cs
examples/DemoApp/src/: CameraController.cpp  CameraController.hpp  Editor.cpp  Editor.hpp  Events.hpp  GLRenderer.cpp  GLRenderer.hpp  Material.hpp  ModelLibrary.cpp  ModelLibrary.hpp  ShaderLibrary.cpp  ShaderLibrary.hpp  TextureLibrary.cpp  TextureLibrary.hpp  Window.cpp  Window.hpp  main.cpp
